--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,1 @@
-{
-    "name": "dieisonbeck/geosan-cnhapp",
-    "description": "Tools CLI your CodeIgniter",
-    "type": "project",
-    "require": {
-        "php": ">=5.6.4",
-        "symfony/console": "^3.1"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Dieison Beck",
-            "email": "dieisonbeck@gmail.com"
-        }
-    ],
-    "autoload":{
-        "psr-4":{
-            "Geosan\\": "src/"
-        }
-    },
-    "minimum-stability": "2.0.3"
-}
+{"description":"Tools CLI your CodeIgniter","autoload":{"psr-4":{"Geosan\\":"src/"}},"authors":[{"name":"Dieison Beck","email":"dieisonbeck@gmail.com"}],"minimum-stability":"2.0.4","require":{"php":">=5.6.4","symfony/console":"^3.1"},"license":"MIT","name":"dieisonbeck/geosan-cnhapp","type":"project"}
